<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PLAY_PARENT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.weather.ui.MainActivity"
    android:background="@color/colorWhite"
    android:padding="0dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="28sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="268dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="26dp"
        android:text="@string/version"
        app:layout_constraintLeft_toLeftOf="@+id/appName"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewVersionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/versionNumber"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/launcherLogo"
        android:layout_width="132dp"
        android:layout_height="123dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/appLogo"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sun_and_cloud"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


</androidx.constraintlayout.widget.ConstraintLayout>